# geomec_bench

./: CMakeLists.txt  CTestConfig.cmake
Documents/: StreamLines.lyx
Fase_1/: TPZDarcyAnalysis.cpp  (+50 more)
Fase_1/Benchmark1a/: CMakeLists.txt  FraturaElastico.cpp  FraturaElastico.h  HidraulicoMonofasico2D.cpp  HidraulicoMonofasicoElastico.cpp  HidraulicoMonofasicoElastico.h  TPZDarcy2DMaterial.cpp  main.cpp
Fase_1/Benchmark1a/gmsh/: GeometryBench.msh  GeometryBench0b.geo  GeometryBench2Domain.geo  GeometryBench2Domain.msh  GeometryBench2Ftest.geo  GeometryBench2Ftest.msh  GeometryBench2crossingFrac.geo  GeometryBench3Domain.geo  GeometryBench3Domain.msh  GeometryBench3Domain01.geo  GeometryBench3Domain01.msh  GeometryBench3Ftest.geo  GeometryBench3Ftest.msh  GeometryBench3Ftest00.geo  GeometryBench3Ftest00.msh  GeometryBenchConnectsVerify.geo  GeometryBenchP21Original.geo  GeometryBenchP21Original.msh  GeometryBenchP21Original00.geo  GeometryBenchP21Original00.msh  GeometryBenchP21Original00a.geo  GeometryBenchP21Original00a.msh  GeometryBenchP21Original00b.geo  GeometryBenchP21Original00b.msh  GeometryBenchP21Original01.geo  GeometryBenchP21Original01.msh  GeometryBenchP21Original03.geo  GeometryBenchP21Original03.msh  GeometryBenchP21Original04.geo  GeometryBenchP21Original04.msh  GeometryBenchP21OriginalCoarse.geo  GeometryBenchP21OriginalCoarse.msh  GeometryBenchRef.geo
MHM_Frac/: BoxReservoir.msh  CMakeLists.txt  FracFlow.cpp  FracFlowGmsh.cpp  FracPre.cpp  TPZFracSet.h  TPZFracSimulation.cpp  TPZFractureIntersection.cpp  VTKIntersect.cpp  VTKIntersect.h  meshgen.cpp
(+13 files in other folders)
